<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="acc_setting_auto_bottom">自动调节</string>
    <string name="acc_setting_auto_subtitle">NGP自动</string>
    <string name="acc_setting_auto_title">跟车距离</string>
    <string name="acc_setting_distance_tips">调节</string>
    <string name="acc_setting_distance_title">跟车距离</string>
    <string name="acc_setting_guide_distance_tips">调节跟车距离</string>
    <string name="acc_setting_guide_speed_tips">调节巡航速度</string>
    <string name="acc_setting_guide_title">ACC操作引导</string>
    <string name="acc_setting_speed_down_tips">减少</string>
    <string name="acc_setting_speed_title">巡航速度</string>
    <string name="acc_setting_speed_unit">km/h</string>
    <string name="acc_setting_speed_up_tips">增加</string>
    <string name="acc_setting_speed_use_left_scroll">用左侧滚轮</string>
    <string name="air_temperature_name">空调温度</string>
    <string name="air_temperature_unit">℃</string>
    <string name="air_volume_close_name">空调关闭</string>
    <string name="air_volume_name">空调风量</string>
    <string name="air_volume_toast_name">再次向下滚动关闭空调</string>
    <string name="app_name">xpInstrument</string>
    <string name="avg_power_consumption_title">平均能耗</string>
    <string name="avg_power_consumption_unit">kWh/100km</string>
    <string name="bottom_status_endurance_mileage_empty">---</string>
    <string name="bottom_status_endurance_mileage_unit"> km</string>
    <string name="car_condition_tyre_pressure_unit">bar</string>
    <string name="car_speed_init_value">0</string>
    <string name="car_speed_unit">km/h</string>
    <string name="charge_appoint_start_time">&lt;font &gt; &lt;big&gt;&lt;big&gt;&lt;big&gt;&lt;big&gt;%1$s&lt;/big&gt;&lt;/big&gt;&lt;/big&gt;&lt;/big&gt;&lt;/font&gt; &lt;font color=#8A939D&gt;开始&lt;/font&gt;</string>
    <string name="charge_begin">开始</string>
    <string name="charge_begin_time">充电开始时间</string>
    <string name="charge_current_voltage">%1$s A %2$s V</string>
    <string name="charge_current_voltage_less_than_one">&lt;1 A %1$s V</string>
    <string name="charge_endurance">续航</string>
    <string name="charge_endurance_unit">公里</string>
    <string name="charge_error">充电故障</string>
    <string name="charge_expect_remain_time">预计剩余时间</string>
    <string name="charge_expect_remain_time_hour">&lt;font &gt; &lt;big&gt;&lt;big&gt;&lt;big&gt;&lt;big&gt;%1$s&lt;/big&gt;&lt;/big&gt;&lt;/big&gt;&lt;/big&gt;&lt;/font&gt; &lt;font color=#8A939D&gt;小时&lt;/font&gt;</string>
    <string name="charge_expect_remain_time_hour_minute">&lt;font &gt; &lt;big&gt;&lt;big&gt;&lt;big&gt;&lt;big&gt;%1$s&lt;/big&gt;&lt;/big&gt;&lt;/big&gt;&lt;/big&gt;&lt;/font&gt; &lt;font color=#8A939D&gt;小时&lt;/font&gt; &lt;font&gt; &lt;big&gt;&lt;big&gt;&lt;big&gt;&lt;big&gt;%2$s&lt;/big&gt;&lt;/big&gt;&lt;/big&gt;&lt;/big&gt;&lt;/font&gt; &lt;font color=#8A939D&gt;分钟&lt;/font&gt;</string>
    <string name="charge_expect_remain_time_minute">&lt;font &gt; &lt;big&gt;&lt;big&gt;&lt;big&gt;&lt;big&gt;%1$s&lt;/big&gt;&lt;/big&gt;&lt;/big&gt;&lt;/big&gt;&lt;/font&gt; &lt;font color=#8A939D&gt;分钟&lt;/font&gt;</string>
    <string name="charge_hour">小时</string>
    <string name="charge_minute">分钟</string>
    <string name="charge_remain">剩余</string>
    <string name="charge_status_">充电准备</string>
    <string name="charge_status_appoint">预约充电</string>
    <string name="charge_status_charging">充电中</string>
    <string name="charge_status_charging_content_complete">充电即将完成</string>
    <string name="charge_status_charging_content_long">充电时间较长</string>
    <string name="charge_status_charging_content_remain">时间计算中</string>
    <string name="charge_status_connected_unable_to_startup">充电枪连接\n无法启动车辆</string>
    <string name="charge_status_cooling">电池冷却中</string>
    <string name="charge_status_fail">未能正常充电</string>
    <string name="charge_status_finish">充电完成</string>
    <string name="charge_status_heating">电池加热中</string>
    <string name="charge_status_not_connected">充电枪未连接</string>
    <string name="charge_status_prepare">充电准备</string>
    <string name="charge_status_unknown">未知状态</string>
    <string name="charge_time_long">充电时间较长</string>
    <string name="charge_total_time">充电时长</string>
    <string name="charge_unknown_time">--</string>
    <string name="discharge_error">对外供电故障</string>
    <string name="discharge_status_discharging">对外供电中</string>
    <string name="discharge_status_fail">未能正常供电</string>
    <string name="discharge_status_prepare">对外供电准备</string>
    <string name="discharge_status_stopped">对外供电已停止</string>
    <string name="drive_mode_adaptive">ADAPTIVE</string>
    <string name="drive_mode_boost">BOOST</string>
    <string name="drive_mode_comfort">COMFORT</string>
    <string name="drive_mode_eco">ECO</string>
    <string name="drive_mode_geek">TUNING</string>
    <string name="drive_mode_normal">STANDARD</string>
    <string name="drive_mode_offroad">OFFROAD</string>
    <string name="drive_mode_sport">SPORT</string>
    <string name="drive_mode_xpedal">XPEDAL</string>
    <string name="endurance_standard_cltc">CLTC</string>
    <string name="endurance_standard_nedc">NEDC</string>
    <string name="endurance_standard_wltp">WLTP</string>
    <string name="force_power_cancel">取消</string>
    <string name="force_power_confirm">确定</string>
    <string name="force_power_off_content">强制下电可能引发行车风险，是否确定下电？</string>
    <string name="force_power_off_title">强制下电确认</string>
    <string name="gear_d_value">D</string>
    <string name="gear_n_value">N</string>
    <string name="gear_p_value">P</string>
    <string name="gear_r_value">R</string>
    <string name="log_already_upload">日志已经上传</string>
    <string name="media_no_resource_default">随时随地\n听我想听的声音</string>
    <string name="n_gear_mistake_cancel">取消 %ds</string>
    <string name="n_gear_mistake_confirm">确认</string>
    <string name="n_gear_mistake_content">是否确认切换N挡？</string>
    <string name="n_gear_mistake_title">N挡防误触保护</string>
    <string name="navi_distance_km">公里</string>
    <string name="navi_distance_m">米</string>
    <string name="navi_road_enter">进入</string>
    <string name="navisr_fillFrame">Fill frame</string>
    <string name="navisr_fillFrame20">Fill 20</string>
    <string name="navisr_fillFrame30">Fill 30</string>
    <string name="navisr_fillFrame40">Fill 40</string>
    <string name="navisr_fillFrame50">Fill 50</string>
    <string name="navisr_fillFrame60">Fill 60</string>
    <string name="navisr_name">metersd</string>
    <string name="navisr_pause_xpilot">Pause Xpilot</string>
    <string name="navisr_settings">Settings</string>
    <string name="navisr_show_log">Show log</string>
    <string name="odometer_average_energy_cost">平均能耗</string>
    <string name="odometer_distance">距离</string>
    <string name="odometer_from_last_charge">上次充电后</string>
    <string name="odometer_hint_from_startup">自启动后</string>
    <string name="odometer_hint_odometer">里程</string>
    <string name="odometer_time">时间</string>
    <string name="odometer_total_odometer">总里程</string>
    <string name="odometer_unit_distance">km</string>
    <string name="odometer_unit_energy_cost">kWh/100km</string>
    <string name="odometer_unit_minute">min</string>
    <string name="operation_confirm_tips">确认</string>
    <string name="operation_switch_tips">切换</string>
    <string name="osd_call_answer">接听</string>
    <string name="osd_call_connect_content">已接通 </string>
    <string name="osd_call_hang_up">挂断</string>
    <string name="osd_call_incoming_content">来电</string>
    <string name="osd_call_name">李先生</string>
    <string name="osd_call_ok">确认</string>
    <string name="osd_call_reject">拒绝</string>
    <string name="osd_call_volume">通话音量</string>
    <string name="osd_media_volume">媒体音量</string>
    <string name="ota_text">正在升级Xmart OS，请等待</string>
    <string name="ota_text_des">升级过程中将无法使用车辆</string>
    <string name="p_gear_protect_confirm_text">确认</string>
    <string name="p_gear_protect_error_state">当前主驾靠背状态异常，是否仍挂出P挡?</string>
    <string name="p_gear_protect_normal_state">当前主驾靠背角度不适合驾驶，是否仍挂出P挡?</string>
    <string name="p_gear_protect_operate_text">踩刹车，同时按</string>
    <string name="p_gear_protect_time">(%1$ss)</string>
    <string name="p_gear_protect_title">P挡安全保护</string>
    <string name="radar_calibration_text">毫米波角雷达动态校准中</string>
    <string name="radar_warning_dis_stop">停止</string>
    <string name="radar_warning_dis_value">%1$scm</string>
    <string name="ready">READY</string>
    <string name="remain_distance_unit">km</string>
    <string name="remain_distance_unit_capital">KM</string>
    <string name="search_menu_title">Search</string>
    <string name="sensor_fault_name">故障</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="temperature_unit">℃</string>
    <string name="time_am">上午</string>
    <string name="time_pm">下午</string>
    <string name="vui_label_activity_back">返回</string>
    <string name="vui_label_cancel">取消</string>
    <string name="vui_label_close_activity">关闭</string>
    <string name="vui_label_close_dialog">关闭</string>
    <string name="vui_label_confirm">确认</string>
    <string name="vui_label_dialog">对话框|弹窗</string>
    <string name="vui_label_display_password">显示</string>
    <string name="vui_label_hide_password">隐藏</string>
    <string name="vui_label_input">输入</string>
    <string name="vui_label_reset">重设|清空|重置</string>
    <string name="vui_label_search">搜索</string>
    <string name="wiper_fast">极速</string>
    <string name="wiper_high">高速</string>
    <string name="wiper_low">低速</string>
    <string name="wiper_medium">中速</string>
    <string name="wiper_title">自动雨刮灵敏度</string>
    <string name="x_capital_off">close</string>
    <string name="x_capital_on">open</string>
    <string name="x_countdown_tips">%s (%ss)</string>
    <string name="x_date_picker_day">%d</string>
    <string name="x_date_picker_year">%d</string>
    <string name="x_font_typeface_bold">xpeng-fonts-bold</string>
    <string name="x_font_typeface_medium">xpeng-fonts-medium</string>
    <string name="x_font_typeface_number">xpeng-fonts-number</string>
    <string name="x_font_typeface_number_bold">xpeng-fonts-number-bold</string>
</resources>