<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:orientation="vertical" android:paddingLeft="30dp" android:paddingTop="20dp" android:paddingRight="30dp" android:paddingBottom="30dp" android:layout_width="match_parent" android:layout_height="wrap_content">
    <TextView android:textSize="30dp" android:paddingBottom="35dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/navisr_settings"/>
    <CheckBox android:id="@+id/showLog" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/navisr_show_log"/>
    <LinearLayout android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10dp">
        <CheckBox android:id="@+id/fillFrame" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/navisr_fillFrame"/>
        <Button android:id="@+id/fillFrame20" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:text="@string/navisr_fillFrame20"/>
        <Button android:id="@+id/fillFrame30" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:text="@string/navisr_fillFrame30"/>
        <Button android:id="@+id/fillFrame40" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:text="@string/navisr_fillFrame40"/>
        <Button android:id="@+id/fillFrame50" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:text="@string/navisr_fillFrame50"/>
        <Button android:id="@+id/fillFrame60" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:text="@string/navisr_fillFrame60"/>
    </LinearLayout>
</LinearLayout>
