<?xml version="1.0" encoding="utf-8"?>
<com.xiaopeng.xui.widget.XRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" android:paddingTop="@dimen/odometer_card_padding_top" android:layout_width="match_parent" android:layout_height="match_parent" android:paddingStart="@dimen/odometer_card_padding_start" android:paddingEnd="@dimen/odometer_card_padding_end">
    <com.xiaopeng.xui.widget.XRelativeLayout android:id="@+id/rl_hint_from_startup" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/odometer_rl_from_startup_margin_bottom">
        <com.xiaopeng.xui.widget.XTextView android:textColor="@color/odometer_title_tx_color" android:id="@+id/tv_hint_from_startup" android:text="@string/odometer_hint_from_startup" style="@style/OdometerDataTxStyle"/>
        <com.xiaopeng.xui.view.XView android:background="@color/odometer_line_color" android:layout_width="@dimen/odometer_first_line_width" android:layout_height="@dimen/odometer_line_height" android:layout_centerVertical="true" android:layout_alignParentEnd="true"/>
    </com.xiaopeng.xui.widget.XRelativeLayout>
    <com.xiaopeng.xui.widget.XTextView android:textColor="@color/odometer_common_tx_color" android:id="@+id/tv_distance" android:layout_marginBottom="@dimen/odometer_hint_distance_margin_bottom" android:text="@string/odometer_distance" android:layout_below="@+id/rl_hint_from_startup" style="@style/OdometerHintTxStyle"/>
    <com.xiaopeng.xui.widget.XTextView android:textColor="@color/odometer_common_tx_color" android:id="@+id/tv_time" android:layout_marginBottom="@dimen/odometer_hint_time_margin_bottom" android:text="@string/odometer_time" android:layout_below="@+id/tv_distance" style="@style/OdometerHintTxStyle"/>
    <com.xiaopeng.xui.widget.XTextView android:textColor="@color/odometer_common_tx_color" android:id="@+id/tv_energy_cost" android:layout_marginBottom="@dimen/odometer_hint_energy_cost_margin_bottom" android:text="@string/odometer_average_energy_cost" android:layout_below="@+id/tv_time" style="@style/OdometerHintTxStyle"/>
    <com.xiaopeng.xui.widget.XRelativeLayout android:id="@+id/rl_odometer" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/odometer_hint_odometer_margin_bottom" android:layout_below="@+id/tv_energy_cost">
        <com.xiaopeng.xui.widget.XTextView android:textColor="@color/odometer_title_tx_color" android:id="@+id/tv_odometer" android:text="@string/odometer_hint_odometer" style="@style/OdometerDataTxStyle"/>
        <com.xiaopeng.xui.view.XView android:background="@color/odometer_line_color" android:layout_width="@dimen/odometer_second_line_width" android:layout_height="@dimen/odometer_line_height" android:layout_centerVertical="true" android:layout_alignParentEnd="true"/>
    </com.xiaopeng.xui.widget.XRelativeLayout>
    <com.xiaopeng.xui.widget.XTextView android:textColor="@color/odometer_common_tx_color" android:id="@+id/tv_from_last_charge" android:layout_marginBottom="@dimen/odometer_hint_from_last_charge_margin_bottom" android:text="@string/odometer_from_last_charge" android:layout_below="@+id/rl_odometer" style="@style/OdometerHintTxStyle"/>
    <com.xiaopeng.xui.widget.XTextView android:textColor="@color/odometer_common_tx_color" android:id="@+id/tv_total_distance" android:text="@string/odometer_total_odometer" android:layout_below="@+id/tv_from_last_charge" style="@style/OdometerHintTxStyle"/>
    <com.xiaopeng.xui.widget.XTextView android:textColor="@color/odometer_common_tx_color" android:id="@+id/tv_unit_distance" android:text="@string/odometer_unit_distance" android:layout_alignBaseline="@+id/tv_distance" style="@style/OdometerUnitTxStyle"/>
    <com.xiaopeng.xui.widget.XTextView android:textColor="@color/odometer_common_tx_color" android:id="@+id/tv_unit_time" android:layout_alignBaseline="@+id/tv_time" style="@style/OdometerUnitTxStyle"/>
    <com.xiaopeng.xui.widget.XTextView android:textColor="@color/odometer_common_tx_color" android:id="@+id/tv_unit_energy_cost" android:text="@string/odometer_unit_energy_cost" android:layout_alignBaseline="@+id/tv_energy_cost" style="@style/OdometerUnitTxStyle"/>
    <com.xiaopeng.xui.widget.XTextView android:textColor="@color/odometer_common_tx_color" android:id="@+id/tv_unit_from_last_charge" android:text="@string/odometer_unit_distance" android:layout_alignBaseline="@+id/tv_from_last_charge" style="@style/OdometerUnitTxStyle"/>
    <com.xiaopeng.xui.widget.XTextView android:textColor="@color/odometer_common_tx_color" android:id="@+id/tv_unit_total_odometer" android:text="@string/odometer_unit_distance" android:layout_alignBaseline="@+id/tv_total_distance" style="@style/OdometerUnitTxStyle"/>
    <com.xiaopeng.xui.widget.XTextView android:textColor="@color/odometer_data_tx_color" android:id="@+id/tv_data_distance" android:layout_alignBaseline="@+id/tv_distance" android:layout_toStartOf="@+id/tv_unit_distance" style="@style/OdometerDataTxStyle"/>
    <com.xiaopeng.xui.widget.XTextView android:textColor="@color/odometer_data_tx_color" android:id="@+id/tv_data_time" android:layout_alignBaseline="@+id/tv_time" android:layout_toStartOf="@+id/tv_unit_time" style="@style/OdometerDataTxStyle"/>
    <com.xiaopeng.xui.widget.XTextView android:textColor="@color/odometer_data_tx_color" android:id="@+id/tv_data_energy_cost" android:layout_alignBaseline="@+id/tv_energy_cost" android:layout_toStartOf="@+id/tv_unit_energy_cost" style="@style/OdometerDataTxStyle"/>
    <com.xiaopeng.xui.widget.XTextView android:textColor="@color/odometer_data_tx_color" android:id="@+id/tv_data_odometer_from_last_charge" android:layout_alignBaseline="@+id/tv_from_last_charge" android:layout_toStartOf="@+id/tv_unit_from_last_charge" style="@style/OdometerDataTxStyle"/>
    <com.xiaopeng.xui.widget.XTextView android:textColor="@color/odometer_data_tx_color" android:id="@+id/tv_data_total_odometer" android:layout_alignBaseline="@+id/tv_total_distance" android:layout_toStartOf="@+id/tv_unit_total_odometer" style="@style/OdometerDataTxStyle"/>
</com.xiaopeng.xui.widget.XRelativeLayout>
