<?xml version="1.0" encoding="utf-8"?>
<com.xiaopeng.xui.widget.XRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:background="@drawable/bg_custom_dialog" android:layout_width="wrap_content" android:layout_height="wrap_content">
    <com.xiaopeng.xui.widget.XConstraintLayout android:layout_width="@dimen/osd_call_width" android:layout_height="@dimen/osd_call_height" android:layout_marginTop="@dimen/navi_sr_common_50dp" android:layout_centerHorizontal="true">
        <com.xiaopeng.xui.widget.XImageView android:id="@+id/bg_acc_content" android:layout_width="@dimen/text_confirm_width" android:layout_height="@dimen/text_confirm_height" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintLeft_toLeftOf="0" app:layout_constraintRight_toRightOf="0" app:layout_constraintTop_toTopOf="0"/>
        <com.xiaopeng.xui.widget.XTextView android:id="@+id/tv_acc_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/acc_title_margin_top" android:layout_marginStart="@dimen/acc_title_margin_start" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0" style="@style/AccCommonText"/>
        <com.xiaopeng.xui.widget.XTextView android:id="@+id/tv_acc_distance_guide" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/acc_guide_distance_text_bottom" android:text="@string/acc_setting_guide_distance_tips" android:drawableStart="@drawable/ic_acc_setting_distance" android:layout_marginEnd="@dimen/acc_guide_text_end" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" style="@style/AccCommonText.Drawable"/>
        <com.xiaopeng.xui.widget.XTextView android:id="@+id/tv_acc_speed_guide" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/acc_guide_speed_text_bottom" android:text="@string/acc_setting_guide_speed_tips" android:drawableStart="@drawable/merge_down_up_operation" android:layout_marginEnd="@dimen/acc_guide_text_end" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" style="@style/AccCommonText.Drawable"/>
        <com.xiaopeng.xui.widget.XTextView android:id="@+id/tv_acc_distance_setting" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/acc_guide_speed_text_bottom" android:text="@string/acc_setting_distance_tips" android:drawableStart="@drawable/ic_acc_setting_distance" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" style="@style/AccCommonText.Drawable"/>
        <com.xiaopeng.xui.widget.XTextView android:textSize="@dimen/text_size_34" android:id="@+id/tv_acc_setting_info" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/acc_setting_distance_info_margin_top" android:layout_marginStart="@dimen/acc_setting_distance_info_margin_start" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0" style="@style/AccCommonText.Setting"/>
        <com.xiaopeng.xui.widget.XTextView android:id="@+id/tv_acc_speed_unit" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/acc_setting_speed_unit" android:layout_marginStart="@dimen/acc_setting_unit_margin_start" app:layout_constraintBottom_toBottomOf="@+id/tv_acc_setting_info" app:layout_constraintStart_toEndOf="@+id/tv_acc_setting_info" app:layout_constraintTop_toTopOf="@+id/tv_acc_setting_info" style="@style/AccCommonText"/>
        <com.xiaopeng.xui.widget.XLinearLayout android:id="@+id/ll_acc_speed_setting" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/acc_guide_speed_text_bottom" android:layout_centerHorizontal="true" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0">
            <com.xiaopeng.xui.widget.XTextView android:textSize="@dimen/text_size_27" android:textColor="@color/text_color_10" android:id="@+id/tv_acc_speed_use_left_scroll" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/acc_setting_speed_use_left_scroll"/>
            <com.xiaopeng.xui.widget.XTextView android:id="@+id/tv_acc_speed_down_setting" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/acc_setting_speed_down_tips" android:drawableStart="@drawable/ic_steeringwheel_arrowdown" android:layout_marginStart="@dimen/acc_speed_up_setting_margin" style="@style/AccCommonText.Drawable"/>
            <com.xiaopeng.xui.widget.XTextView android:id="@+id/tv_acc_speed_up_setting" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/acc_setting_speed_up_tips" android:drawableStart="@drawable/ic_steeringwheel_arrowup" android:layout_marginStart="@dimen/acc_speed_up_setting_margin" style="@style/AccCommonText.Drawable"/>
        </com.xiaopeng.xui.widget.XLinearLayout>
        <com.xiaopeng.xui.widget.XTextView android:textSize="@dimen/text_size_27" android:textColor="@color/text_color_10" android:id="@+id/tv_acc_auto_bottom" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="24dp" android:text="@string/acc_setting_auto_bottom" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0"/>
    </com.xiaopeng.xui.widget.XConstraintLayout>
</com.xiaopeng.xui.widget.XRelativeLayout>
