<?xml version="1.0" encoding="utf-8"?>
<com.xiaopeng.xui.widget.XRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" android:background="@drawable/bg_custom_dialog" android:layout_width="wrap_content" android:layout_height="wrap_content">
    <com.xiaopeng.xui.widget.XRelativeLayout android:layout_width="@dimen/osd_call_width" android:layout_height="@dimen/osd_call_height" android:layout_marginTop="@dimen/navi_sr_common_50dp" android:layout_centerHorizontal="true">
        <com.xiaopeng.xui.widget.XTextView android:textSize="@dimen/text_size_27" android:textColor="@color/text_color_10" android:ellipsize="end" android:id="@+id/call_content" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/osd_call_state_margin_top" android:text="@string/osd_call_incoming_content" android:maxLines="1" android:layout_centerHorizontal="true"/>
        <com.xiaopeng.xui.widget.XTextView android:textSize="@dimen/text_size_34" android:textColor="@color/text_color_09" android:ellipsize="end" android:id="@+id/call_from_name" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/osd_call_name_margin_top" android:layout_marginBottom="@dimen/osd_call_name_margin_bottom" android:singleLine="true" android:layout_centerHorizontal="true"/>
        <com.xiaopeng.xui.widget.XLinearLayout android:gravity="center" android:id="@+id/call_answer" android:background="@drawable/bg_text_choose_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_below="@+id/call_from_name" android:layout_centerHorizontal="true">
            <com.xiaopeng.xui.widget.XTextView android:textSize="@dimen/text_size_27" android:textColor="@color/text_color_09" android:gravity="center" android:layout_gravity="center" android:id="@+id/answer_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/osd_call_answer" android:drawablePadding="@dimen/osd_call_drawable_start" android:drawableStart="@drawable/ic_card_call_answer"/>
        </com.xiaopeng.xui.widget.XLinearLayout>
        <com.xiaopeng.xui.widget.XLinearLayout android:gravity="center" android:id="@+id/call_reject" android:background="@drawable/bg_text_choose_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/osd_call_reject_margin_top" android:layout_centerHorizontal="true">
            <com.xiaopeng.xui.widget.XTextView android:textSize="@dimen/text_size_27" android:textColor="@color/text_color_09" android:gravity="center" android:layout_gravity="center" android:id="@+id/reject_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/osd_call_reject" android:drawablePadding="@dimen/osd_call_drawable_start" android:drawableStart="@drawable/ic_card_call_hangup"/>
        </com.xiaopeng.xui.widget.XLinearLayout>
        <com.xiaopeng.xui.widget.XTextView android:textSize="@dimen/text_size_27" android:textColor="@color/text_color_10" android:id="@+id/call_switch_tip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/osd_call_ok_margin_top" android:text="@string/operation_switch_tips" android:drawablePadding="@dimen/osd_call_drawable_start" android:drawableStart="@drawable/merge_add_sub_operation" android:layout_marginStart="@dimen/osd_call_switch_tip_margin_right" android:layout_alignParentStart="true"/>
        <com.xiaopeng.xui.widget.XTextView android:textSize="@dimen/text_size_27" android:textColor="@color/text_color_10" android:id="@+id/call_ok" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/osd_call_ok_margin_top" android:text="@string/osd_call_ok" android:drawablePadding="@dimen/osd_call_drawable_start" android:layout_centerHorizontal="true" android:drawableStart="@drawable/ic_steeringwheel_mute" android:layout_marginStart="@dimen/osd_call_end_of_ok_margin" android:layout_toEndOf="@+id/call_switch_tip"/>
    </com.xiaopeng.xui.widget.XRelativeLayout>
</com.xiaopeng.xui.widget.XRelativeLayout>
