<?xml version="1.0" encoding="utf-8"?>
<com.xiaopeng.xui.widget.XRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" android:background="@drawable/bg_custom_dialog" android:layout_width="wrap_content" android:layout_height="wrap_content">
    <com.xiaopeng.xui.widget.XRelativeLayout android:layout_width="@dimen/osd_call_width" android:layout_height="@dimen/osd_call_height" android:layout_marginTop="@dimen/navi_sr_common_50dp" android:layout_centerHorizontal="true">
        <com.xiaopeng.xui.widget.XTextView android:textSize="@dimen/text_size_27" android:textColor="@color/osd_p_gear_title_color" android:ellipsize="end" android:id="@+id/tv_p_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/osd_call_state_margin_top" android:text="@string/p_gear_protect_title" android:maxLines="1" android:layout_marginStart="@dimen/osd_call_state_margin_start"/>
        <com.xiaopeng.xui.widget.XTextView android:textSize="@dimen/text_size_30" android:textColor="@color/osd_p_gear_content_color" android:ellipsize="end" android:id="@+id/tv_p_content" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/osd_p_gear_protect_content_top" android:layout_marginBottom="@dimen/osd_p_gear_protect_content_bottom" android:maxLines="2" android:layout_marginStart="@dimen/osd_call_name_margin_start" android:layout_marginEnd="@dimen/osd_call_name_margin_start"/>
        <com.xiaopeng.xui.widget.XLinearLayout android:gravity="center" android:id="@+id/p_answer_bg" android:background="@drawable/bg_button_chosen" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_below="@+id/tv_p_content" android:layout_centerHorizontal="true">
            <com.xiaopeng.xui.widget.XTextView android:textSize="@dimen/text_size_27" android:textColor="@color/osd_p_gear_confirm_color" android:gravity="center" android:layout_gravity="center" android:id="@+id/p_answer_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/p_gear_protect_confirm_text" android:drawablePadding="@dimen/osd_call_drawable_start"/>
        </com.xiaopeng.xui.widget.XLinearLayout>
        <com.xiaopeng.xui.widget.XTextView android:textSize="@dimen/text_size_27" android:textColor="@color/osd_p_gear_confirm_bottom_color" android:id="@+id/p_switch_tip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/osd_call_ok_margin_top" android:text="@string/p_gear_protect_operate_text" android:drawablePadding="@dimen/osd_call_drawable_start" android:layout_marginStart="@dimen/osd_p_gear_protect_tips_start" android:layout_alignParentStart="true"/>
        <com.xiaopeng.xui.widget.XTextView android:textSize="@dimen/text_size_27" android:textColor="@color/osd_p_gear_confirm_bottom_color" android:id="@+id/p_confirm_bottom" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/osd_call_ok_margin_top" android:text="@string/osd_call_ok" android:drawablePadding="@dimen/osd_call_drawable_start" android:layout_centerHorizontal="true" android:drawableStart="@drawable/ic_steeringwheel_mute" android:layout_marginStart="@dimen/osd_call_end_of_ok_margin" android:layout_toEndOf="@+id/p_switch_tip"/>
    </com.xiaopeng.xui.widget.XRelativeLayout>
</com.xiaopeng.xui.widget.XRelativeLayout>
